--- a/pepperfry-service-config.yml
+++ b/pepperfry-service-config.yml
@@ -2,5 +2,13 @@ spring:
   application: 
     name: perpperfry-product-service
     version: 1.0.0
+  datasource: 
+    url: jdbc:mysql://localhost:3306/dpdb
+    username: root
+    password: welcome1
+  jpa: 
+    generate-ddl: true
+    show-sql: true
 product: 
   defaultCategory: electronics
+
