--- a/pepperfry-payment-config.yml
+++ b/pepperfry-payment-config.yml
@@ -5,7 +5,10 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
 spring:
-  datasorce: 
+  datasource:
     url: jdbc:mysql://localhost:3306/dpdb
     username: root
-    passowrd: welcome1      
+    password: welcome1
+  jpa:
+    show-sql: true
+    generate-ddl: true
